Model added to complete the MVC pattern in site

--- a/site/language/en-GB/en-GB.com_counter.ini
+++ b/site/language/en-GB/en-GB.com_counter.ini
@@ -2,3 +2,4 @@
 ; Copyright (C) 2022 Kiran Adhikari. All rights reserved.
 
 COM_COUNTER_MSG_COUNTER="Hello! Welcome to the counter"
+COM_COUNTER_MSG_GREETING="If you're reading this message, then the item model is working fine"
