--- a/admin/language/en-GB/en-GB.com_counter.ini
+++ b/admin/language/en-GB/en-GB.com_counter.ini
@@ -2,3 +2,4 @@
 ; Copyright (C) 2022 Kiran Adhikari. All rights reserved.
 
 COM_COUNTER_MSG_COUNTER="Welcome to Counter!"
+COM_COUNTER_USER="Test User"
