Added a request variable to menu link

--- a/admin/language/en-GB/en-GB.com_counter.sys.ini
+++ b/admin/language/en-GB/en-GB.com_counter.sys.ini
@@ -3,3 +3,7 @@
 
 COM_COUNTER_MENU_COUNTER_TITLE="Welcome to Counter!"
 COM_COUNTER_MENU_COUNTER_DESC="My first Joomla! page"
+COM_COUNTER_GREETING_PARAM_LABEL="Greeting Type"
+COM_COUNTER_GREETING_PARAM_DESC="Select the greeting type"
+COM_COUNTER_GREETING_TYPE_WELCOME_PARAM="Say Welcome"
+COM_COUNTER_GREETING_TYPE_BYE_PARAM="Say Bye"
