--- a/site/language/en-GB/en-GB.com_counter.ini
+++ b/site/language/en-GB/en-GB.com_counter.ini
@@ -3,3 +3,5 @@
 
 COM_COUNTER_MSG_COUNTER="Hello! Welcome to the counter"
 COM_COUNTER_MSG_GREETING="If you're reading this message, then the item model is working fine"
+COM_COUNTER_GREETING_TYPE_BYE_MSG="Bye Bye from the item model"
+COM_COUNTER_GREETING_TYPE_WELCOME_MSG="Welcome from the item model"
